[gd_scene load_steps=3 format=3 uid="uid://c5bbf25qofvfd"]

[ext_resource type="Script" uid="uid://cm4p40u2jlsd5" path="res://scripts/game/item_card.gd" id="1_item_script"]
[ext_resource type="Texture2D" uid="uid://xmg3eg1qtghw" path="res://assets/cards/items/item_card_background.png" id="2_bg"]

[node name="item_card" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(600, 800)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -190.0
offset_right = 130.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(130, 190)
script = ExtResource("1_item_script")

[node name="item_card_background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.000004
offset_top = -61.999996
offset_right = 2797.9995
offset_bottom = 3762.9995
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_bg")

[node name="item_art" type="TextureRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 67.0
offset_top = 126.0
offset_right = 519.0
offset_bottom = 543.0
expand_mode = 2

[node name="item_name" type="Label" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 36.0
offset_right = 554.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="item_description" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 472.0
offset_right = 555.0
offset_bottom = 630.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="item_stats" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 638.0
offset_right = 567.0
offset_bottom = 761.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
